Removal of multiple writer threads per partition -- partitions are the parallelism.